--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "grunt-contrib-watch": "^1.0.0",
     "jquery": "^3.3.1",
     "lodash": "^4.17.4",
-    "matchdep": "^2.0.0"
+    "matchdep": "^2.0.0",
+    "xml-js": "^1.6.2"
   },
   "devDependencies": {},
   "repository": {
