updated sample data

--- a/assets/js/data/firebase.sample.json
+++ b/assets/js/data/firebase.sample.json
@@ -41,13 +41,22 @@
                 "Ender"
             ],
             "uid": "argfktkjctj5wyte1c3wsqt70"
+        },
+        "-L4qCHTrYDGSDZHnid-M": {
+            "added": 1518106650,
+            "media": "movie:68726",
+            "music": "track:5QTxFnGygVM4jFQiBovmRo",
+            "tags": [
+                "Newt & Hermann"
+            ],
+            "uid": "argfktkjctj5wyte1c3wsqt70"
         }
     },
     "media": {
         "book:375802": {
             "id": 375802,
             "image": "https://images.gr-assets.com/books/1408303130l/375802.jpg",
-            "last_cached": 1518040062,
+            "last_cached": 1518102163,
             "small_image": "https://images.gr-assets.com/books/1408303130m/375802.jpg",
             "subtitle": "Orson Scott Card",
             "title": "Ender's Game (Ender's Saga, #1)",
@@ -56,10 +65,19 @@
         "movie:330459": {
             "id": 330459,
             "image": "https://image.tmdb.org/t/p/w400_and_h600_bestv2/qjiskwlV1qQzRCjpV0cL9pEMF9a.jpg",
-            "last_cached": 1518038427,
+            "last_cached": 1518107071,
             "small_image": "http://image.tmdb.org/t/p/w185/qjiskwlV1qQzRCjpV0cL9pEMF9a.jpg",
             "subtitle": "2016",
             "title": "Rogue One: A Star Wars Story",
+            "type": "movie"
+        },
+        "movie:68726": {
+            "id": 68726,
+            "image": "https://image.tmdb.org/t/p/w400_and_h600_bestv2/sCJEwEShZvruTpQ2a4yiX3Q9EyZ.jpg",
+            "last_cached": 1518107072,
+            "small_image": "http://image.tmdb.org/t/p/w185/sCJEwEShZvruTpQ2a4yiX3Q9EyZ.jpg",
+            "subtitle": "2013",
+            "title": "Pacific Rim",
             "type": "movie"
         },
         "tv:66732": {
@@ -102,6 +120,14 @@
             "last_cached": 1515103391,
             "subtitle": "Bad Suns",
             "title": "Salt"
+        },
+        "5QTxFnGygVM4jFQiBovmRo": {
+            "id": "5QTxFnGygVM4jFQiBovmRo",
+            "image": "https://i.scdn.co/image/6bd4450a8fbf30702a92f1c825377f1933ded249",
+            "last_cached": 1518107014,
+            "small_image": "https://i.scdn.co/image/8c14e672f1a29b0dc632b9c4e0f6ef19232c6dcf",
+            "subtitle": "Blue Öyster Cult",
+            "title": "(Don't Fear) The Reaper"
         }
     },
     "users": {
