song details load

--- a/assets/js/data/firebase.sample.json
+++ b/assets/js/data/firebase.sample.json
@@ -115,7 +115,7 @@
             "subtitle": "Imagine Dragons",
             "title": "Radioactive"
         },
-        "54bO9jrn1NExmpg6Afsc2A": {
+        "163F4SPkExGwITk7VKz5sp": {
             "image": "https://i.scdn.co/image/2ed6f4a26d7e6ec311901d8694ed18b4097d3866",
             "last_cached": 1515103391,
             "subtitle": "Bad Suns",
