song page gets links by media

--- a/assets/js/data/firebase.sample.json
+++ b/assets/js/data/firebase.sample.json
@@ -3,7 +3,7 @@
         "-L2MA3roxuqzTDh1Q1nX": {
             "added": 1514844644,
             "media": "tv:66732",
-            "music": "track:54bO9jrn1NExmpg6Afsc2A",
+            "music": "track:163F4SPkExGwITk7VKz5sp",
             "tags": [
                 "Will Byers"
             ],
