track links now link to media, updated sample data

--- a/assets/js/data/firebase.sample.json
+++ b/assets/js/data/firebase.sample.json
@@ -50,13 +50,37 @@
                 "Newt & Hermann"
             ],
             "uid": "argfktkjctj5wyte1c3wsqt70"
+        },
+        "-L4qsF3GSbv8v0-9QEg4": {
+            "added": 1518117912,
+            "media": "tv:61664",
+            "music": "track:316r1KLN0bcmpr7TZcMCXT",
+            "uid": "argfktkjctj5wyte1c3wsqt70"
+        },
+        "-L4qtFfKTQc1iVQWdDM4": {
+            "added": 1518118177,
+            "media": "book:17675462",
+            "music": "track:316r1KLN0bcmpr7TZcMCXT",
+            "tags": [
+                "OT5"
+            ],
+            "uid": "argfktkjctj5wyte1c3wsqt70"
         }
     },
     "media": {
+        "book:17675462": {
+            "id": "17675462",
+            "image": "https://images.gr-assets.com/books/1477103737l/17675462.jpg",
+            "last_cached": 1518118178,
+            "small_image": "https://images.gr-assets.com/books/1477103737m/17675462.jpg",
+            "subtitle": "Maggie Stiefvater",
+            "title": "The Raven Boys (The Raven Cycle, #1)",
+            "type": "book"
+        },
         "book:375802": {
-            "id": 375802,
+            "id": "375802",
             "image": "https://images.gr-assets.com/books/1408303130l/375802.jpg",
-            "last_cached": 1518102163,
+            "last_cached": 1518118344,
             "small_image": "https://images.gr-assets.com/books/1408303130m/375802.jpg",
             "subtitle": "Orson Scott Card",
             "title": "Ender's Game (Ender's Saga, #1)",
@@ -74,11 +98,29 @@
         "movie:68726": {
             "id": 68726,
             "image": "https://image.tmdb.org/t/p/w400_and_h600_bestv2/sCJEwEShZvruTpQ2a4yiX3Q9EyZ.jpg",
-            "last_cached": 1518107072,
+            "last_cached": 1518118327,
             "small_image": "http://image.tmdb.org/t/p/w185/sCJEwEShZvruTpQ2a4yiX3Q9EyZ.jpg",
             "subtitle": "2013",
             "title": "Pacific Rim",
             "type": "movie"
+        },
+        "track:163F4SPkExGwITk7VKz5sp": {
+            "id": "163F4SPkExGwITk7VKz5sp",
+            "image": "https://i.scdn.co/image/2cf1b79f2663619a87a2732dfb3cba153a9707e1",
+            "last_cached": 1518117616,
+            "small_image": "https://i.scdn.co/image/2ed6f4a26d7e6ec311901d8694ed18b4097d3866",
+            "subtitle": "Bad Suns",
+            "title": "Salt",
+            "type": "track"
+        },
+        "tv:61664": {
+            "id": 61664,
+            "image": "https://image.tmdb.org/t/p/w400_and_h600_bestv2/kmyvlQ9QKzgdZY31rXaUlgCnzrB.jpg",
+            "last_cached": 1518118054,
+            "small_image": "http://image.tmdb.org/t/p/w185/kmyvlQ9QKzgdZY31rXaUlgCnzrB.jpg",
+            "subtitle": "2015",
+            "title": "Sense8",
+            "type": "tv"
         },
         "tv:66732": {
             "id": 66732,
@@ -97,11 +139,27 @@
             "subtitle": "Regina Spektor",
             "title": "Ballad Of A Politician"
         },
+        "163F4SPkExGwITk7VKz5sp": {
+            "id": "163F4SPkExGwITk7VKz5sp",
+            "image": "https://i.scdn.co/image/2cf1b79f2663619a87a2732dfb3cba153a9707e1",
+            "last_cached": 1518117840,
+            "small_image": "https://i.scdn.co/image/2ed6f4a26d7e6ec311901d8694ed18b4097d3866",
+            "subtitle": "Bad Suns",
+            "title": "Salt"
+        },
         "2W7DkWXBgqLQmlCBIxeqVe": {
             "image": "https://i.scdn.co/image/8540b06aa75795f704165699b9f86040d8fc064f",
             "last_cached": 1515103391,
             "subtitle": "Switchfoot",
             "title": "Hello Hurricane"
+        },
+        "316r1KLN0bcmpr7TZcMCXT": {
+            "id": "316r1KLN0bcmpr7TZcMCXT",
+            "image": "https://i.scdn.co/image/a2aba574af86865eee08624042b1bf75d15cc362",
+            "last_cached": 1518118179,
+            "small_image": "https://i.scdn.co/image/a5a8d74562e8df93438e8942599cd1538c92a9b6",
+            "subtitle": "The 1975",
+            "title": "The Sound"
         },
         "3HaJW8VfBwngwVBY0Us7Vq": {
             "image": "https://i.scdn.co/image/de238e90c58b2c8572ef4dc79572d0ae219a2d5a",
@@ -110,22 +168,18 @@
             "title": "Devils On Our Side"
         },
         "4G8gkOterJn0Ywt6uhqbhp": {
+            "id": "4G8gkOterJn0Ywt6uhqbhp",
             "image": "https://i.scdn.co/image/443609cd35e43c7bdb272b3d1d9e80290e128bc5",
-            "last_cached": 1517953251,
+            "last_cached": 1518118340,
+            "small_image": "https://i.scdn.co/image/64e279e82a7d78e1bcb2579bceb54341ef2465b0",
             "subtitle": "Imagine Dragons",
             "title": "Radioactive"
-        },
-        "163F4SPkExGwITk7VKz5sp": {
-            "image": "https://i.scdn.co/image/2ed6f4a26d7e6ec311901d8694ed18b4097d3866",
-            "last_cached": 1515103391,
-            "subtitle": "Bad Suns",
-            "title": "Salt"
         },
         "5QTxFnGygVM4jFQiBovmRo": {
             "id": "5QTxFnGygVM4jFQiBovmRo",
             "image": "https://i.scdn.co/image/6bd4450a8fbf30702a92f1c825377f1933ded249",
-            "last_cached": 1518107014,
-            "small_image": "https://i.scdn.co/image/8c14e672f1a29b0dc632b9c4e0f6ef19232c6dcf",
+            "last_cached": 1518118332,
+            "small_image": "https://i.scdn.co/image/587d47747f51b575a75684e64e8da0c5b1432fb5",
             "subtitle": "Blue Öyster Cult",
             "title": "(Don't Fear) The Reaper"
         }
