updated sample data again

--- a/assets/js/data/firebase.sample.json
+++ b/assets/js/data/firebase.sample.json
@@ -104,15 +104,6 @@
             "title": "Pacific Rim",
             "type": "movie"
         },
-        "track:163F4SPkExGwITk7VKz5sp": {
-            "id": "163F4SPkExGwITk7VKz5sp",
-            "image": "https://i.scdn.co/image/2cf1b79f2663619a87a2732dfb3cba153a9707e1",
-            "last_cached": 1518117616,
-            "small_image": "https://i.scdn.co/image/2ed6f4a26d7e6ec311901d8694ed18b4097d3866",
-            "subtitle": "Bad Suns",
-            "title": "Salt",
-            "type": "track"
-        },
         "tv:61664": {
             "id": 61664,
             "image": "https://image.tmdb.org/t/p/w400_and_h600_bestv2/kmyvlQ9QKzgdZY31rXaUlgCnzrB.jpg",
@@ -125,7 +116,7 @@
         "tv:66732": {
             "id": 66732,
             "image": "https://image.tmdb.org/t/p/w400_and_h600_bestv2/lXS60geme1LlEob5Wgvj3KilClA.jpg",
-            "last_cached": 1518038476,
+            "last_cached": 1518118470,
             "small_image": "http://image.tmdb.org/t/p/w185/lXS60geme1LlEob5Wgvj3KilClA.jpg",
             "subtitle": "2016",
             "title": "Stranger Things",
@@ -134,8 +125,10 @@
     },
     "tracks": {
         "0KtMmvqSo5Bvy3bVsxNGwD": {
-            "image": "https://i.scdn.co/image/0ca0778a882c7b6e4873f8998f2b7dfb741d733e",
-            "last_cached": 1516309220,
+            "id": "0KtMmvqSo5Bvy3bVsxNGwD",
+            "image": "https://i.scdn.co/image/d931139ff5d17c5e98e6fed7be93431d468db556",
+            "last_cached": 1518118466,
+            "small_image": "https://i.scdn.co/image/0ca0778a882c7b6e4873f8998f2b7dfb741d733e",
             "subtitle": "Regina Spektor",
             "title": "Ballad Of A Politician"
         },
@@ -148,8 +141,10 @@
             "title": "Salt"
         },
         "2W7DkWXBgqLQmlCBIxeqVe": {
-            "image": "https://i.scdn.co/image/8540b06aa75795f704165699b9f86040d8fc064f",
-            "last_cached": 1515103391,
+            "id": "2W7DkWXBgqLQmlCBIxeqVe",
+            "image": "https://i.scdn.co/image/2ff4ba17c35bd287fdac6cbcaff8824a927b205b",
+            "last_cached": 1518118467,
+            "small_image": "https://i.scdn.co/image/8540b06aa75795f704165699b9f86040d8fc064f",
             "subtitle": "Switchfoot",
             "title": "Hello Hurricane"
         },
