filled out sample data so we hvae 4 on each category

--- a/assets/js/data/firebase.sample.json
+++ b/assets/js/data/firebase.sample.json
@@ -65,16 +65,87 @@
                 "OT5"
             ],
             "uid": "argfktkjctj5wyte1c3wsqt70"
+        },
+        "-L4qwmneiiOQBxcTsVmb": {
+            "added": 1518119103,
+            "media": "book:19161852",
+            "music": "track:6wjb6rlWb4P8NRcZpP17UJ",
+            "tags": [
+                "Syenite",
+                " Alabaster"
+            ],
+            "uid": "argfktkjctj5wyte1c3wsqt70"
+        },
+        "-L4qx42VXiLKwRLBoipE": {
+            "added": 1518119178,
+            "media": "movie:181808",
+            "music": "track:4OGOs9wM85AnNrvSu95N0N",
+            "tags": [
+                "Kylo Ren",
+                " Darth Tantrum"
+            ],
+            "uid": "argfktkjctj5wyte1c3wsqt70"
+        },
+        "-L4qxEjL6Bs6GWTPbKTv": {
+            "added": 1518119222,
+            "media": "movie:140607",
+            "music": "track:3EQBVWHnCv19VW8JSxiNzi",
+            "tags": [
+                "Rey"
+            ],
+            "uid": "argfktkjctj5wyte1c3wsqt70"
+        },
+        "-L4qxSCi1U5ZmL-S_yv2": {
+            "added": 1518119277,
+            "media": "tv:40008",
+            "music": "track:3AqPL1n1wKc5DVFFnYuJhp",
+            "tags": [
+                "Will & Hannibal"
+            ],
+            "uid": "argfktkjctj5wyte1c3wsqt70"
+        },
+        "-L4qxl64azNKdgpzXYpx": {
+            "added": 1518119358,
+            "media": "book:29044",
+            "music": "track:1aLAI1HsBDY1ju1g5cqljK",
+            "uid": "argfktkjctj5wyte1c3wsqt70"
+        },
+        "-L4qxxSVG_cBE8PiJRzt": {
+            "added": 1518119408,
+            "media": "tv:246",
+            "music": "track:6C7ZgThn6Yan5MTZdAEEFw",
+            "tags": [
+                "Toph"
+            ],
+            "uid": "argfktkjctj5wyte1c3wsqt70"
         }
     },
     "media": {
         "book:17675462": {
             "id": "17675462",
             "image": "https://images.gr-assets.com/books/1477103737l/17675462.jpg",
-            "last_cached": 1518118178,
+            "last_cached": 1518118572,
             "small_image": "https://images.gr-assets.com/books/1477103737m/17675462.jpg",
             "subtitle": "Maggie Stiefvater",
             "title": "The Raven Boys (The Raven Cycle, #1)",
+            "type": "book"
+        },
+        "book:19161852": {
+            "id": "19161852",
+            "image": "https://images.gr-assets.com/books/1386803701l/19161852.jpg",
+            "last_cached": 1518119104,
+            "small_image": "https://images.gr-assets.com/books/1386803701m/19161852.jpg",
+            "subtitle": "N.K. Jemisin",
+            "title": "The Fifth Season (The Broken Earth, #1)",
+            "type": "book"
+        },
+        "book:29044": {
+            "id": "29044",
+            "image": "https://images.gr-assets.com/books/1451554846l/29044.jpg",
+            "last_cached": 1518119365,
+            "small_image": "https://images.gr-assets.com/books/1451554846m/29044.jpg",
+            "subtitle": "Donna Tartt",
+            "title": "The Secret History",
             "type": "book"
         },
         "book:375802": {
@@ -85,6 +156,24 @@
             "subtitle": "Orson Scott Card",
             "title": "Ender's Game (Ender's Saga, #1)",
             "type": "book"
+        },
+        "movie:140607": {
+            "id": 140607,
+            "image": "https://image.tmdb.org/t/p/w400_and_h600_bestv2/weUSwMdQIa3NaXVzwUoIIcAi85d.jpg",
+            "last_cached": 1518119229,
+            "small_image": "http://image.tmdb.org/t/p/w185/weUSwMdQIa3NaXVzwUoIIcAi85d.jpg",
+            "subtitle": "2015",
+            "title": "Star Wars: The Force Awakens",
+            "type": "movie"
+        },
+        "movie:181808": {
+            "id": 181808,
+            "image": "https://image.tmdb.org/t/p/w400_and_h600_bestv2/kOVEVeg59E0wsnXmF9nrh6OmWII.jpg",
+            "last_cached": 1518119194,
+            "small_image": "http://image.tmdb.org/t/p/w185/kOVEVeg59E0wsnXmF9nrh6OmWII.jpg",
+            "subtitle": "2017",
+            "title": "Star Wars: The Last Jedi",
+            "type": "movie"
         },
         "movie:330459": {
             "id": 330459,
@@ -104,10 +193,28 @@
             "title": "Pacific Rim",
             "type": "movie"
         },
+        "tv:246": {
+            "id": 246,
+            "image": "https://image.tmdb.org/t/p/w400_and_h600_bestv2/sB8V0pQtJZ17v8FLXMOcYz6045c.jpg",
+            "last_cached": 1518119409,
+            "small_image": "http://image.tmdb.org/t/p/w185/sB8V0pQtJZ17v8FLXMOcYz6045c.jpg",
+            "subtitle": "2005",
+            "title": "Avatar: The Last Airbender",
+            "type": "tv"
+        },
+        "tv:40008": {
+            "id": 40008,
+            "image": "https://image.tmdb.org/t/p/w400_and_h600_bestv2/kArcGHvTb7m1v6RFHdU40jpiGZD.jpg",
+            "last_cached": 1518119277,
+            "small_image": "http://image.tmdb.org/t/p/w185/kArcGHvTb7m1v6RFHdU40jpiGZD.jpg",
+            "subtitle": "2013",
+            "title": "Hannibal",
+            "type": "tv"
+        },
         "tv:61664": {
             "id": 61664,
             "image": "https://image.tmdb.org/t/p/w400_and_h600_bestv2/kmyvlQ9QKzgdZY31rXaUlgCnzrB.jpg",
-            "last_cached": 1518118054,
+            "last_cached": 1518118938,
             "small_image": "http://image.tmdb.org/t/p/w185/kmyvlQ9QKzgdZY31rXaUlgCnzrB.jpg",
             "subtitle": "2015",
             "title": "Sense8",
@@ -116,7 +223,7 @@
         "tv:66732": {
             "id": 66732,
             "image": "https://image.tmdb.org/t/p/w400_and_h600_bestv2/lXS60geme1LlEob5Wgvj3KilClA.jpg",
-            "last_cached": 1518118470,
+            "last_cached": 1518118548,
             "small_image": "http://image.tmdb.org/t/p/w185/lXS60geme1LlEob5Wgvj3KilClA.jpg",
             "subtitle": "2016",
             "title": "Stranger Things",
@@ -135,10 +242,18 @@
         "163F4SPkExGwITk7VKz5sp": {
             "id": "163F4SPkExGwITk7VKz5sp",
             "image": "https://i.scdn.co/image/2cf1b79f2663619a87a2732dfb3cba153a9707e1",
-            "last_cached": 1518117840,
+            "last_cached": 1518118545,
             "small_image": "https://i.scdn.co/image/2ed6f4a26d7e6ec311901d8694ed18b4097d3866",
             "subtitle": "Bad Suns",
             "title": "Salt"
+        },
+        "1aLAI1HsBDY1ju1g5cqljK": {
+            "id": "1aLAI1HsBDY1ju1g5cqljK",
+            "image": "https://i.scdn.co/image/836a2b674aaef7db8a5862850815988ab9e13057",
+            "last_cached": 1518119358,
+            "small_image": "https://i.scdn.co/image/c5d3f0e97343024219f2a228cabdd26080137f8b",
+            "subtitle": "Ghostly Kisses",
+            "title": "Never Know"
         },
         "2W7DkWXBgqLQmlCBIxeqVe": {
             "id": "2W7DkWXBgqLQmlCBIxeqVe",
@@ -151,10 +266,34 @@
         "316r1KLN0bcmpr7TZcMCXT": {
             "id": "316r1KLN0bcmpr7TZcMCXT",
             "image": "https://i.scdn.co/image/a2aba574af86865eee08624042b1bf75d15cc362",
-            "last_cached": 1518118179,
+            "last_cached": 1518118574,
             "small_image": "https://i.scdn.co/image/a5a8d74562e8df93438e8942599cd1538c92a9b6",
             "subtitle": "The 1975",
             "title": "The Sound"
+        },
+        "3AqPL1n1wKc5DVFFnYuJhp": {
+            "id": "3AqPL1n1wKc5DVFFnYuJhp",
+            "image": "https://i.scdn.co/image/5ecc248cd9fa66657f5444b07e01afb9c39788c7",
+            "last_cached": 1518119277,
+            "small_image": "https://i.scdn.co/image/cadb21920d477864a5bacf701dcc03d5d035567e",
+            "subtitle": "The Cinematic Orchestra",
+            "title": "To Build A Home"
+        },
+        "3EQBVWHnCv19VW8JSxiNzi": {
+            "id": "3EQBVWHnCv19VW8JSxiNzi",
+            "image": "https://i.scdn.co/image/59605b524453747b491863e096a370d207467e9a",
+            "last_cached": 1518119234,
+            "small_image": "https://i.scdn.co/image/ecaa355c3c23bb95488481dc4210e6db3395d77a",
+            "subtitle": "Bad Suns",
+            "title": "20 Years"
+        },
+        "3F5AA6EBeLaq4x1Cn457Sz": {
+            "id": "3F5AA6EBeLaq4x1Cn457Sz",
+            "image": "https://i.scdn.co/image/2cf1b79f2663619a87a2732dfb3cba153a9707e1",
+            "last_cached": 1518119146,
+            "small_image": "https://i.scdn.co/image/2ed6f4a26d7e6ec311901d8694ed18b4097d3866",
+            "subtitle": "Bad Suns",
+            "title": "Take My Love and Run"
         },
         "3HaJW8VfBwngwVBY0Us7Vq": {
             "image": "https://i.scdn.co/image/de238e90c58b2c8572ef4dc79572d0ae219a2d5a",
@@ -170,6 +309,14 @@
             "subtitle": "Imagine Dragons",
             "title": "Radioactive"
         },
+        "4OGOs9wM85AnNrvSu95N0N": {
+            "id": "4OGOs9wM85AnNrvSu95N0N",
+            "image": "https://i.scdn.co/image/b89bd6dbfa1772b398c2f30c82103475c9aecd0f",
+            "last_cached": 1518119178,
+            "small_image": "https://i.scdn.co/image/bd3fafe7182eec20c452513ef2a4eb76f68d2342",
+            "subtitle": "Avril Lavigne",
+            "title": "Freak Out"
+        },
         "5QTxFnGygVM4jFQiBovmRo": {
             "id": "5QTxFnGygVM4jFQiBovmRo",
             "image": "https://i.scdn.co/image/6bd4450a8fbf30702a92f1c825377f1933ded249",
@@ -177,6 +324,22 @@
             "small_image": "https://i.scdn.co/image/587d47747f51b575a75684e64e8da0c5b1432fb5",
             "subtitle": "Blue Öyster Cult",
             "title": "(Don't Fear) The Reaper"
+        },
+        "6C7ZgThn6Yan5MTZdAEEFw": {
+            "id": "6C7ZgThn6Yan5MTZdAEEFw",
+            "image": "https://i.scdn.co/image/43d0690cdcb496979a3516501afb823ce451a1cd",
+            "last_cached": 1518119407,
+            "small_image": "https://i.scdn.co/image/faeb5b03abf31cc1523913ce7356b66eecfbe72b",
+            "subtitle": "LL Cool J",
+            "title": "Mama Said Knock You Out"
+        },
+        "6wjb6rlWb4P8NRcZpP17UJ": {
+            "id": "6wjb6rlWb4P8NRcZpP17UJ",
+            "image": "https://i.scdn.co/image/791353302b5393cc3e6e903beb02c85f47b43a66",
+            "last_cached": 1518119103,
+            "small_image": "https://i.scdn.co/image/1625eaa94bc5a0289a14168e2340656b2e178663",
+            "subtitle": "Bad Suns",
+            "title": "Maybe We're Meant To Be Alone"
         }
     },
     "users": {
