--- a/assets/data/firebase.sample.json
+++ b/assets/data/firebase.sample.json
@@ -196,12 +196,6 @@
             "music": "track:6xSXGyZeglKxgzjwH3f4Ih",
             "uid": "iiimosley"
         },
-        "-L5QC-TrNIjuohVdZh_H": {
-            "added": 1518727333,
-            "media": "movie:16306",
-            "music": "track:6de45B3eB5sOEyny4llmWW",
-            "uid": "iiimosley"
-        },
         "-L5QCJv35VEf05sDn4XL": {
             "added": 1518727417,
             "media": "tv:1427",
@@ -222,6 +216,81 @@
                 "Kylo Ren"
             ],
             "uid": "argfktkjctj5wyte1c3wsqt70"
+        },
+        "-L5QFHj1mKlJMS9zmHlB": {
+            "added": 1518728194,
+            "media": "movie:680",
+            "music": "track:3djNBlI7xOggg7pnsOLaNm",
+            "tags": [
+                "Marcellus Wallace"
+            ],
+            "uid": "12171797897"
+        },
+        "-L5QFYXMEX1hCcJ288qG": {
+            "added": 1518728263,
+            "media": "tv:48891",
+            "music": "track:4RnfMhMUMqHlrn4V6A3KfS",
+            "tags": [
+                "Captain Holt"
+            ],
+            "uid": "12171797897"
+        },
+        "-L5QFqefkYmC7_3JkESU": {
+            "added": 1518728342,
+            "media": "movie:68721",
+            "music": "track:46t6KAk6AphP1BfNmA8Drq",
+            "tags": [
+                "Duh"
+            ],
+            "uid": "12171797897"
+        },
+        "-L5QG34r5nb5gYfNxHlZ": {
+            "added": 1518728397,
+            "media": "tv:66732",
+            "music": "track:5rQKjP9forn7JVuiZBj6eZ",
+            "uid": "calvin.bottoms"
+        },
+        "-L5QG9QuBNDWx_GCyT0R": {
+            "added": 1518728550,
+            "media": "movie:10634",
+            "music": "track:7jLbTp3qZzah9kMIdW8e5M",
+            "uid": "12171797897"
+        },
+        "-L5QGAkh-wnz2c1ijLKF": {
+            "added": 1518728428,
+            "media": "movie:1093",
+            "music": "track:6dRx7OUXfvosnXG3g9lWGi",
+            "uid": "iiimosley"
+        },
+        "-L5QGa9ZzItmYQ86at9r": {
+            "added": 1518728536,
+            "media": "movie:7453",
+            "music": "track:1C0pmryC2MdXfa7MZ9uIrU",
+            "uid": "12171797897"
+        },
+        "-L5QGlyJdNK1C_Qws-M9": {
+            "added": 1518728585,
+            "media": "tv:63351",
+            "music": "track:3PxxBt3BnzhtyPSqDcgQQ9",
+            "uid": "12171797897"
+        },
+        "-L5QIFV8lrgrayNW_UyO": {
+            "added": 1518728972,
+            "media": "movie:115",
+            "music": "track:1dWvuCErtHSFAuDVzjbLeb",
+            "uid": "iiimosley"
+        },
+        "-L5QKwSFQ48u4xTxFF3p": {
+            "added": 1518729676,
+            "media": "movie:286217",
+            "music": "track:76Ug1q4l6rGwJ2ubV5wh3X",
+            "uid": "12171797897"
+        },
+        "-L5QLZIInUuMF4dqrqXt": {
+            "added": 1518729839,
+            "media": "movie:765",
+            "music": "track:2z83t0gfxu3Dnb0XUDBR3B",
+            "uid": "iiimosley"
         }
     },
     "media": {
@@ -255,7 +324,7 @@
         "book:375802": {
             "id": "375802",
             "image": "https://images.gr-assets.com/books/1408303130l/375802.jpg",
-            "last_cached": 1518624736,
+            "last_cached": 1518728500,
             "small_image": "https://images.gr-assets.com/books/1408303130m/375802.jpg",
             "subtitle": "Orson Scott Card",
             "title": "Ender's Game (Ender's Saga, #1)",
@@ -278,6 +347,33 @@
             "subtitle": "William Gibson",
             "title": "Neuromancer (Sprawl, #1)",
             "type": "book"
+        },
+        "movie:10634": {
+            "id": 10634,
+            "image": "https://image.tmdb.org/t/p/w400_and_h600_bestv2/kkoGT4bnK5oGiNbzGGcXzrXMSxn.jpg",
+            "last_cached": 1518728550,
+            "small_image": "http://image.tmdb.org/t/p/w185/kkoGT4bnK5oGiNbzGGcXzrXMSxn.jpg",
+            "subtitle": "1995",
+            "title": "Friday",
+            "type": "movie"
+        },
+        "movie:1093": {
+            "id": 1093,
+            "image": "https://image.tmdb.org/t/p/w400_and_h600_bestv2/gwPV0aXkNyb33BcLTbYH6b1bxya.jpg",
+            "last_cached": 1518728428,
+            "small_image": "http://image.tmdb.org/t/p/w185/gwPV0aXkNyb33BcLTbYH6b1bxya.jpg",
+            "subtitle": "1958",
+            "title": "Elevator to the Gallows",
+            "type": "movie"
+        },
+        "movie:115": {
+            "id": 115,
+            "image": "https://image.tmdb.org/t/p/w400_and_h600_bestv2/qiE3ovg9TPylHReZjizQ40LsKZV.jpg",
+            "last_cached": 1518728972,
+            "small_image": "http://image.tmdb.org/t/p/w185/qiE3ovg9TPylHReZjizQ40LsKZV.jpg",
+            "subtitle": "1998",
+            "title": "The Big Lebowski",
+            "type": "movie"
         },
         "movie:11542": {
             "id": 11542,
@@ -315,6 +411,15 @@
             "title": "Fantastic Planet",
             "type": "movie"
         },
+        "movie:286217": {
+            "id": 286217,
+            "image": "https://image.tmdb.org/t/p/w400_and_h600_bestv2/5aGhaIHYuQbqlHWvWYqMCnj40y2.jpg",
+            "last_cached": 1518729676,
+            "small_image": "http://image.tmdb.org/t/p/w185/5aGhaIHYuQbqlHWvWYqMCnj40y2.jpg",
+            "subtitle": "2015",
+            "title": "The Martian",
+            "type": "movie"
+        },
         "movie:679": {
             "id": 679,
             "image": "https://image.tmdb.org/t/p/w400_and_h600_bestv2/nORMXEkYEbzkU5WkMWMgRDJwjSZ.jpg",
@@ -322,6 +427,42 @@
             "small_image": "http://image.tmdb.org/t/p/w185/nORMXEkYEbzkU5WkMWMgRDJwjSZ.jpg",
             "subtitle": "1986",
             "title": "Aliens",
+            "type": "movie"
+        },
+        "movie:680": {
+            "id": 680,
+            "image": "https://image.tmdb.org/t/p/w400_and_h600_bestv2/dM2w364MScsjFf8pfMbaWUcWrR.jpg",
+            "last_cached": 1518728194,
+            "small_image": "http://image.tmdb.org/t/p/w185/dM2w364MScsjFf8pfMbaWUcWrR.jpg",
+            "subtitle": "1994",
+            "title": "Pulp Fiction",
+            "type": "movie"
+        },
+        "movie:68721": {
+            "id": 68721,
+            "image": "https://image.tmdb.org/t/p/w400_and_h600_bestv2/1Ilv6ryHUv6rt9zIsbSEJUmmbEi.jpg",
+            "last_cached": 1518728342,
+            "small_image": "http://image.tmdb.org/t/p/w185/1Ilv6ryHUv6rt9zIsbSEJUmmbEi.jpg",
+            "subtitle": "2013",
+            "title": "Iron Man 3",
+            "type": "movie"
+        },
+        "movie:7453": {
+            "id": 7453,
+            "image": "https://image.tmdb.org/t/p/w400_and_h600_bestv2/fOb4cJMhnZ11BoHNUii3Vcfo3XU.jpg",
+            "last_cached": 1518728536,
+            "small_image": "http://image.tmdb.org/t/p/w185/fOb4cJMhnZ11BoHNUii3Vcfo3XU.jpg",
+            "subtitle": "2005",
+            "title": "The Hitchhiker's Guide to the Galaxy",
+            "type": "movie"
+        },
+        "movie:765": {
+            "id": 765,
+            "image": "https://image.tmdb.org/t/p/w400_and_h600_bestv2/n49mpgUsPgBfRg2qIEj31HX0chu.jpg",
+            "last_cached": 1518729839,
+            "small_image": "http://image.tmdb.org/t/p/w185/n49mpgUsPgBfRg2qIEj31HX0chu.jpg",
+            "subtitle": "1987",
+            "title": "Evil Dead II",
             "type": "movie"
         },
         "movie:8748": {
@@ -369,6 +510,15 @@
             "title": "Hannibal",
             "type": "tv"
         },
+        "tv:48891": {
+            "id": 48891,
+            "image": "https://image.tmdb.org/t/p/w400_and_h600_bestv2/7tTvREykun6WeGJ4hy7sCG9TOeP.jpg",
+            "last_cached": 1518728263,
+            "small_image": "http://image.tmdb.org/t/p/w185/7tTvREykun6WeGJ4hy7sCG9TOeP.jpg",
+            "subtitle": "2013",
+            "title": "Brooklyn Nine-Nine",
+            "type": "tv"
+        },
         "tv:61664": {
             "id": 61664,
             "image": "https://image.tmdb.org/t/p/w400_and_h600_bestv2/kmyvlQ9QKzgdZY31rXaUlgCnzrB.jpg",
@@ -378,10 +528,19 @@
             "title": "Sense8",
             "type": "tv"
         },
+        "tv:63351": {
+            "id": 63351,
+            "image": "https://image.tmdb.org/t/p/w400_and_h600_bestv2/rTmal9fDbwh5F0waol2hq35U4ah.jpg",
+            "last_cached": 1518728584,
+            "small_image": "http://image.tmdb.org/t/p/w185/rTmal9fDbwh5F0waol2hq35U4ah.jpg",
+            "subtitle": "2015",
+            "title": "Narcos",
+            "type": "tv"
+        },
         "tv:66732": {
             "id": 66732,
             "image": "https://image.tmdb.org/t/p/w400_and_h600_bestv2/lXS60geme1LlEob5Wgvj3KilClA.jpg",
-            "last_cached": 1518725916,
+            "last_cached": 1518728396,
             "small_image": "http://image.tmdb.org/t/p/w185/lXS60geme1LlEob5Wgvj3KilClA.jpg",
             "subtitle": "2016",
             "title": "Stranger Things",
@@ -494,6 +653,14 @@
             "subtitle": "Bad Suns",
             "title": "Salt"
         },
+        "1C0pmryC2MdXfa7MZ9uIrU": {
+            "id": "1C0pmryC2MdXfa7MZ9uIrU",
+            "image": "https://i.scdn.co/image/7020c26a9d3ab5564b20d7c644f0bf48025c030c",
+            "last_cached": 1518728536,
+            "small_image": "https://i.scdn.co/image/79843b5133a8eccb97a6c0f19345024be9a28755",
+            "subtitle": "Barenaked Ladies",
+            "title": "One Week"
+        },
         "1Ee4JIZHzsAlbYq4oUvT91": {
             "id": "1Ee4JIZHzsAlbYq4oUvT91",
             "image": "https://i.scdn.co/image/0a4c3e4d5199225d0631ef4928be3c7cf88d4852",
@@ -501,6 +668,14 @@
             "small_image": "https://i.scdn.co/image/b60d4aa9605d21a81bff14bb71c5e24318c47b38",
             "subtitle": "Switchfoot",
             "title": "We Are One Tonight"
+        },
+        "1dWvuCErtHSFAuDVzjbLeb": {
+            "id": "1dWvuCErtHSFAuDVzjbLeb",
+            "image": "https://i.scdn.co/image/21e7e6a42520eb2b940fd925641a79968c1003ff",
+            "last_cached": 1518728972,
+            "small_image": "https://i.scdn.co/image/8bdd73ca56ebc317aaeaa02ed4456f02bc354a50",
+            "subtitle": "Kenny Rogers & The First Edition",
+            "title": "Just Dropped In (To See What Condition My Condition Is In)"
         },
         "1yxHLyIGKgYqd6b10QZbFM": {
             "id": "1yxHLyIGKgYqd6b10QZbFM",
@@ -525,6 +700,22 @@
             "small_image": "https://i.scdn.co/image/8afc00243df902a0cb394ad4b98b8aab2a0ff2bf",
             "subtitle": "Marina and the Diamonds",
             "title": "How To Be A Heartbreaker"
+        },
+        "2x91iJc0UkFcjRMEZ2CoWB": {
+            "id": "2x91iJc0UkFcjRMEZ2CoWB",
+            "image": "https://i.scdn.co/image/dd695d8a18d33640f2abca4588ef36a8ac1811a6",
+            "last_cached": 1518728314,
+            "small_image": "https://i.scdn.co/image/01f81fbd70d1cef051806e892e6db4e49224697b",
+            "subtitle": "Miles Davis",
+            "title": "Freddie Freeloader"
+        },
+        "2z83t0gfxu3Dnb0XUDBR3B": {
+            "id": "2z83t0gfxu3Dnb0XUDBR3B",
+            "image": "https://i.scdn.co/image/4c1d45f684af397a69730bd3010bd6f9e2785312",
+            "last_cached": 1518729839,
+            "small_image": "https://i.scdn.co/image/3d70d9c426563303a8b548a9790fc4f5a2c2af48",
+            "subtitle": "Bad Brains",
+            "title": "Big Take Over"
         },
         "316r1KLN0bcmpr7TZcMCXT": {
             "id": "316r1KLN0bcmpr7TZcMCXT",
@@ -558,6 +749,38 @@
             "subtitle": "Bad Suns",
             "title": "20 Years"
         },
+        "3PxxBt3BnzhtyPSqDcgQQ9": {
+            "id": "3PxxBt3BnzhtyPSqDcgQQ9",
+            "image": "https://i.scdn.co/image/b345572d2bd9e2ee08e5b56f3a66a5ea01f94a68",
+            "last_cached": 1518728584,
+            "small_image": "https://i.scdn.co/image/61e514dc5dd8bcd20855e508069b84298b7beac7",
+            "subtitle": "Run The Jewels",
+            "title": "Don't Get Captured"
+        },
+        "3djNBlI7xOggg7pnsOLaNm": {
+            "id": "3djNBlI7xOggg7pnsOLaNm",
+            "image": "https://i.scdn.co/image/d2f70dba239c3143e7317b3245a5557dad9d7d4e",
+            "last_cached": 1518728194,
+            "small_image": "https://i.scdn.co/image/20e68538f6ca047d16de7ec4a97b6bd16e1cc7dd",
+            "subtitle": "2Pac",
+            "title": "California Love - Original Mix (Explicit)"
+        },
+        "46t6KAk6AphP1BfNmA8Drq": {
+            "id": "46t6KAk6AphP1BfNmA8Drq",
+            "image": "https://i.scdn.co/image/d89de0c385f4a6dbd64b7527dc7351899b4f9246",
+            "last_cached": 1518728342,
+            "small_image": "https://i.scdn.co/image/0f8f24bd9b2d85fc42bf81d40a8300984bed57ca",
+            "subtitle": "Ozzy Osbourne",
+            "title": "Iron Man"
+        },
+        "4RnfMhMUMqHlrn4V6A3KfS": {
+            "id": "4RnfMhMUMqHlrn4V6A3KfS",
+            "image": "https://i.scdn.co/image/b345572d2bd9e2ee08e5b56f3a66a5ea01f94a68",
+            "last_cached": 1518728263,
+            "small_image": "https://i.scdn.co/image/61e514dc5dd8bcd20855e508069b84298b7beac7",
+            "subtitle": "Run The Jewels",
+            "title": "Legend Has It"
+        },
         "5ChOqvELRLFjWCa87eUF8K": {
             "id": "5ChOqvELRLFjWCa87eUF8K",
             "image": "https://i.scdn.co/image/c9c17b7b78f44ee32aa38a0bc15fc415b921c9ed",
@@ -573,6 +796,14 @@
             "small_image": "https://i.scdn.co/image/3ca0e7e74accf464a1dd6af71176b43783b43ae0",
             "subtitle": "Dolly Parton",
             "title": "Working Girl"
+        },
+        "5rQKjP9forn7JVuiZBj6eZ": {
+            "id": "5rQKjP9forn7JVuiZBj6eZ",
+            "image": "https://i.scdn.co/image/264de0719e3f774beb9006fdfc9574465c959798",
+            "last_cached": 1518728396,
+            "small_image": "https://i.scdn.co/image/71a1161bbd06d09ce9ec0c67d9f5f738b8b5565e",
+            "subtitle": "Queen",
+            "title": "Bicycle Race"
         },
         "5rR1PAUMgAq4Kpo4CQ1hFT": {
             "id": "5rR1PAUMgAq4Kpo4CQ1hFT",
@@ -606,6 +837,14 @@
             "subtitle": "Jukebox The Ghost",
             "title": "Miss Templeton's 7000th Dream"
         },
+        "6dRx7OUXfvosnXG3g9lWGi": {
+            "id": "6dRx7OUXfvosnXG3g9lWGi",
+            "image": "https://i.scdn.co/image/dd695d8a18d33640f2abca4588ef36a8ac1811a6",
+            "last_cached": 1518728428,
+            "small_image": "https://i.scdn.co/image/01f81fbd70d1cef051806e892e6db4e49224697b",
+            "subtitle": "Miles Davis",
+            "title": "Flamenco Sketches"
+        },
         "6de45B3eB5sOEyny4llmWW": {
             "id": "6de45B3eB5sOEyny4llmWW",
             "image": "https://i.scdn.co/image/b790d02cb796fbc14fb7551ee88c547fc7d3fa6a",
@@ -630,6 +869,14 @@
             "subtitle": "David Bowie",
             "title": "Black Out - 1999 Remastered Version"
         },
+        "76Ug1q4l6rGwJ2ubV5wh3X": {
+            "id": "76Ug1q4l6rGwJ2ubV5wh3X",
+            "image": "https://i.scdn.co/image/b1726c4ceb855e74841bbfe50aaa0c7aec6a54d0",
+            "last_cached": 1518729676,
+            "small_image": "https://i.scdn.co/image/32ebfcab8563707ea09f0b2e02bb47c79c4ee4eb",
+            "subtitle": "Gorillaz",
+            "title": "All Alone"
+        },
         "78tro1rpoxmqjbjiRRRzoH": {
             "id": "78tro1rpoxmqjbjiRRRzoH",
             "image": "https://i.scdn.co/image/54b005998a18976a9fc7f5c867ceb63068e37786",
@@ -653,6 +900,14 @@
             "small_image": "https://i.scdn.co/image/dd2ace69aa8aef0ab994c584d26fe56692316500",
             "subtitle": "Arvo Pärt",
             "title": "Spiegel im Spiegel"
+        },
+        "7jLbTp3qZzah9kMIdW8e5M": {
+            "id": "7jLbTp3qZzah9kMIdW8e5M",
+            "image": "https://i.scdn.co/image/c09983461592f3add5662f098d19dd8141685cfd",
+            "last_cached": 1518728550,
+            "small_image": "https://i.scdn.co/image/3572686fc0936418328ed24b4413c0b1e8007dc4",
+            "subtitle": "2Pac",
+            "title": "Ghetto Gospel"
         }
     },
     "users": {
@@ -753,6 +1008,36 @@
         }
     },
     "votes": {
+        "12171797897:-L5EooDbFpwJUu1_97H3": {
+            "added": 1518728362,
+            "linkId": "-L5EooDbFpwJUu1_97H3",
+            "uid": "12171797897",
+            "value": 1
+        },
+        "12171797897:-L5Q35RvJIdxw2RLJlpK": {
+            "added": 1518728375,
+            "linkId": "-L5Q35RvJIdxw2RLJlpK",
+            "uid": "12171797897",
+            "value": -1
+        },
+        "12171797897:-L5Q3AoW4Hl2ZPTZc5Yp": {
+            "added": 1518728371,
+            "linkId": "-L5Q3AoW4Hl2ZPTZc5Yp",
+            "uid": "12171797897",
+            "value": 1
+        },
+        "12171797897:-L5Q5bEK9iYR06W74JPV": {
+            "added": 1518728354,
+            "linkId": "-L5Q5bEK9iYR06W74JPV",
+            "uid": "12171797897",
+            "value": 1
+        },
+        "12171797897:-L5QEiHqKoPqTbEtNMNk": {
+            "added": 1518728349,
+            "linkId": "-L5QEiHqKoPqTbEtNMNk",
+            "uid": "12171797897",
+            "value": 1
+        },
         "argfktkjctj5wyte1c3wsqt70:-L5EooDbFpwJUu1_97H3": {
             "added": 1518727470,
             "linkId": "-L5EooDbFpwJUu1_97H3",
@@ -763,6 +1048,36 @@
             "added": 1518727482,
             "linkId": "-L5FEfrpNofyg7Y12plE",
             "uid": "argfktkjctj5wyte1c3wsqt70",
+            "value": 1
+        },
+        "argfktkjctj5wyte1c3wsqt70:-L5QG34r5nb5gYfNxHlZ": {
+            "added": 1518729742,
+            "linkId": "-L5QG34r5nb5gYfNxHlZ",
+            "uid": "argfktkjctj5wyte1c3wsqt70",
+            "value": 1
+        },
+        "iiimosley:-L5EooDbFpwJUu1_97H3": {
+            "added": 1518728460,
+            "linkId": "-L5EooDbFpwJUu1_97H3",
+            "uid": "iiimosley",
+            "value": 1
+        },
+        "iiimosley:-L5FEEWXKMChAM5rBswm": {
+            "added": 1518728512,
+            "linkId": "-L5FEEWXKMChAM5rBswm",
+            "uid": "iiimosley",
+            "value": 1
+        },
+        "iiimosley:-L5K70aGTWQh3HnBW83V": {
+            "added": 1518729452,
+            "linkId": "-L5K70aGTWQh3HnBW83V",
+            "uid": "iiimosley",
+            "value": 1
+        },
+        "iiimosley:-L5QGlyJdNK1C_Qws-M9": {
+            "added": 1518728737,
+            "linkId": "-L5QGlyJdNK1C_Qws-M9",
+            "uid": "iiimosley",
             "value": 1
         }
     }
