--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
+    "http-server": "^0.11.1",
     "jquery": "^3.3.1",
     "lodash": "^4.17.4",
     "matchdep": "^2.0.0",
